infra/prod-k8s/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.thanaphat2005.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webapp-clusterip
                port:
                  number: 3000
    - host: api.thanaphat2005.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service-clusterip
                port:
                  number: 80
    - host: id.thanaphat2005.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: identity-service-clusterip
                port:
                  number: 80
